  indeed the view is executed before the renaming.

- An empty clear switch is now accepted in intro patterns before a 
  view application whenever the view is a variable.
  One can now write {}/v to mean {v}/v.  Remark that {}/x is very similar
  to the idiom {}e for the rewrite tactic (the equation e is used for
  rewriting and then discarded).

Changes from 8.8.0 to 8.8.1
===========================

Kernel

- Fix a critical bug with cofixpoints and vm_compute/native_compute (#7333).
- Fix a critical bug with modules and algebraic universes (#7695)
- Fix a critical bug with inlining of polymorphic constants (#7615).
- Fix a critical bug with universe polymorphism and vm_compute (#7723). Was
  present since 8.5.

Notations

- Fixed unexpected collision between only-parsing and only-printing
  notations (issue #7462).

Windows installer

- The Windows installer now includes external packages Ltac2 and Equations
  (it included the Bignums package since 8.8+beta1).

Many other bug fixes, documentation improvements (including fixes of
regressions due to the Sphinx migration), and user message improvements
(for details, see the 8.8.1 milestone at
https://github.com/coq/coq/milestone/13?closed=1).

Changes from 8.8+beta1 to 8.8.0
===============================

Tools

- Asynchronous proof delegation policy was fixed. Since version 8.7
  Coq was ignoring previous runs and the -async-proofs-delegation-threshold
  option did not have the expected behavior.

Tactic language

- The undocumented "nameless" forms `fix N`, `cofix` have been
  deprecated; please use `fix ident N /cofix ident` to explicitely
  name the (co)fixpoint hypothesis to be introduced.

Documentation

- The reference manual is now fully ported to Sphinx.

Other small deprecations and bug fixes.

Changes from 8.7.2 to 8.8+beta1
===============================

Kernel

- Support for template polymorphism for definitions was removed. May trigger
  more "universe inconsistency" errors in rare occasions.